# pyppl_jobtime

./: .pre-commit-config.yaml  .tagitrc  README.md  README.rst  pyppl_jobtime.py  pyproject.toml  requirements.txt  setup.py  tox.ini
tests/: test_jobtime.py
