[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pyppl_jobtime"
version = "0.0.2"
description = "Job running time statistics for PyPPL"
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/pyppl_jobtime"
repository = "https://github.com/pwwang/pyppl_jobtime"

[tool.poetry.dependencies]
python = "^3.6"
pyppl = "*"
cmdy = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"

[tool.poetry.plugins.pyppl]
pyppl_jobtime = "pyppl_jobtime"
